--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> {% extends "bootstrap/base.html" %} {% block title %}TOPページ{% endblock %} {% block content %}
 <div class="container">
     <h1>ログイン画面</h1>
+    <a href="/" role="button" type="button" class="btn btn-outline-primary">メインページ</a>
     <form method="POST">
         <label for="title" class="form-label">ユーザー名</label>
         <input type="text" class="form-control" name="username">
